--- a/src/Panoramic/Pages/Widgets/Note/NoteSettingsForm.xaml
+++ b/src/Panoramic/Pages/Widgets/Note/NoteSettingsForm.xaml
@@ -9,7 +9,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Grid>
+        <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition />
