--- a/src/Panoramic/Pages/Widgets/LinkCollection/EditDialog.xaml
+++ b/src/Panoramic/Pages/Widgets/LinkCollection/EditDialog.xaml
@@ -5,7 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="using:Panoramic.ViewModels.Widgets.LinkCollection">
 
-    <Grid Width="500" RowSpacing="15">
+    <Grid Width="450" RowSpacing="15">
         <Grid.Resources>
             <DataTemplate x:Key="LinkViewTemplate" x:DataType="vm:EditLinkViewModel">
 
@@ -59,13 +59,14 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <Border Grid.Row="0" Background="#222" Padding="15 10" CornerRadius="5">
+        <Border Grid.Row="0" Padding="0 10 0 20" BorderThickness="0 0 0 1" BorderBrush="#666">
             <StackPanel>
-                <TextBlock Margin="0 0 0 15">Add new link</TextBlock>
+                <TextBlock Margin="0 0 0 15" FontWeight="SemiBold">Add a new link</TextBlock>
                 
                 <TextBox Text="{x:Bind ViewModel.NewLinkTitle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                         MaxLength="100"
-                         PlaceholderText="Title" />
+                         IsReadOnly="{x:Bind ViewModel.NewLinkTitleIsReadOnly, Mode=OneWay}"
+                         PlaceholderText="{x:Bind ViewModel.NewLinkTitlePlaceholder, Mode=OneWay}"
+                         MaxLength="100" />
 
                 <TextBox Text="{x:Bind ViewModel.NewLinkUrl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                          Paste="{x:Bind ViewModel.PasteNewLinkUrl}"
@@ -73,11 +74,22 @@
                          Margin="0 10 0 0"
                          PlaceholderText="URL" />
 
-                <Button
-                    Click="{x:Bind ViewModel.Add}"
-                    IsEnabled="{x:Bind ViewModel.NewLinkFormValid, Mode=OneWay}"
-                    Margin="0 10 0 0"
-                    HorizontalAlignment="Right">Add</Button>
+                <Button x:Name="AddLinkButton"
+                        Content="Add"
+                        Click="AddButton_Click"
+                        IsEnabled="{x:Bind ViewModel.NewLinkFormValid, Mode=OneWay}"
+                        Margin="0 10 0 0"
+                        HorizontalAlignment="Right">
+                    <Button.Flyout>
+                        <Flyout>
+                            <TextBlock TextWrapping="Wrap">
+                                <Run>The link already exists in the collection:</Run>
+                                <LineBreak/>
+                                <Run Text="{x:Bind ViewModel.DuplicateLinkTitle, Mode=OneWay}" />
+                            </TextBlock>
+                        </Flyout>
+                    </Button.Flyout>
+                </Button>
             </StackPanel>
         </Border>
 
