--- a/src/Panoramic/Pages/Widgets/Note/NoteWidgetPage.xaml
+++ b/src/Panoramic/Pages/Widgets/Note/NoteWidgetPage.xaml
@@ -18,7 +18,6 @@
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
                     <TextBlock Grid.Column="0"
@@ -26,16 +25,8 @@
                                FontSize="16"
                                Foreground="#ddd"
                                TextWrapping="Wrap" />
-                    
-                    <Button Grid.Column="1"
-                            Click="{x:Bind ViewModel.DeselectNote}"
-                            Visibility="{x:Bind ViewModel.NoteVisible, Mode=OneWay}"
-                            ToolTipService.ToolTip="Explore"
-                            Margin="0 0 10 0">
-                       <FontIcon Glyph="&#xE838;" FontSize="14" />
-                   </Button>
 
-                    <ToggleButton Grid.Column="2"
+                    <ToggleButton Grid.Column="1"
                                   Click="EditButton_Click"
                                   Visibility="{x:Bind ViewModel.NoteVisible, Mode=OneWay}"
                                   IsChecked="{x:Bind ViewModel.Editing, Mode=TwoWay}"
@@ -44,12 +35,15 @@
                         <FontIcon Glyph="&#xE70F;" FontSize="14" />
                     </ToggleButton>
 
-                    <DropDownButton Grid.Column="3" AutomationProperties.Name="Setting">
+                    <DropDownButton Grid.Column="2" AutomationProperties.Name="Setting">
                         <DropDownButton.Content>
                             <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE712;" FontSize="14" />
                         </DropDownButton.Content>
                         <DropDownButton.Flyout>
                             <MenuFlyout Placement="Bottom">
+                                <MenuFlyoutItem Visibility="{x:Bind ViewModel.NoteVisible, Mode=OneWay}" Click="{x:Bind ViewModel.DeselectNote}">Explore</MenuFlyoutItem>
+                                <MenuFlyoutItem Visibility="{x:Bind ViewModel.NoteVisible, Mode=OneWay}" Click="DeleteNoteFromContextMenu_Click">Delete note</MenuFlyoutItem>
+                                <MenuFlyoutSeparator Visibility="{x:Bind ViewModel.NoteVisible, Mode=OneWay}" />
                                 <MenuFlyoutItem Click="SettingsButton_Click">Settings</MenuFlyoutItem>
                                 <MenuFlyoutItem Click="RemoveButton_Click">Remove</MenuFlyoutItem>
                             </MenuFlyout>
