--- a/src/Panoramic/Pages/Widgets/Note/NoteWidgetPage.xaml
+++ b/src/Panoramic/Pages/Widgets/Note/NoteWidgetPage.xaml
@@ -5,6 +5,20 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:m="using:Panoramic.Models.Domain.Note">
 
+    <Page.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.ThemeDictionaries>
+                <ResourceDictionary x:Key="Light">
+                    <SolidColorBrush x:Key="PanoramicFileSystemIconForegroundBrush" Color="#333" />
+                </ResourceDictionary>
+
+                <ResourceDictionary x:Key="Dark">
+                    <SolidColorBrush x:Key="PanoramicFileSystemIconForegroundBrush" Color="#ddd" />
+                </ResourceDictionary>
+            </ResourceDictionary.ThemeDictionaries>
+        </ResourceDictionary>
+    </Page.Resources>
+
     <Border Padding="15" Background="{x:Bind ViewModel.Background, Mode=OneWay}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}">
         <Grid>
             <Grid.RowDefinitions>
@@ -20,11 +34,7 @@
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock Grid.Column="0"
-                               Text="{x:Bind ViewModel.Title, Mode=OneWay}"
-                               FontSize="16"
-                               Foreground="#ddd"
-                               TextWrapping="Wrap" />
+                    <TextBlock Grid.Column="0" Text="{x:Bind ViewModel.Title, Mode=OneWay}" FontSize="16" Foreground="{StaticResource PanoramicWidgetForegroundBrush}" TextWrapping="Wrap" />
 
                     <ToggleButton Grid.Column="1"
                                   Click="EditButton_Click"
@@ -67,7 +77,7 @@
                             </TreeViewItem.ContextFlyout>
                             
                             <StackPanel Orientation="Horizontal">
-                                <FontIcon Glyph="&#xE8B7;" Foreground="#ddd" />
+                                <FontIcon Glyph="&#xE8B7;" Foreground="{StaticResource PanoramicFileSystemIconForegroundBrush}" />
                                 <TextBlock Text="{x:Bind Name}" Margin="10 0 0 0" />
                             </StackPanel>
                         </TreeViewItem>
