--- a/src/Panoramic/Pages/Widgets/PreferencesDialog.xaml
+++ b/src/Panoramic/Pages/Widgets/PreferencesDialog.xaml
@@ -9,14 +9,32 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
+            
+            <Grid Grid.Row="0" Margin="0 0 0 25">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
 
-            <TextBox Grid.Row="0"
+                <ComboBox Grid.Row="0"
+                          SelectedItem="{x:Bind ViewModel.SelectedTheme, Mode=TwoWay}"
+                          Width="150"
+                          Header="Theme">
+                    <x:String>Light</x:String>
+                    <x:String>Dark</x:String>
+                </ComboBox>
+
+                <TextBlock Grid.Row="1" Margin="0 5 0 0" Foreground="{x:Bind ViewModel.ThemeInfoLabelForeground, Mode=OneWay}" TextWrapping="Wrap">Changes to the Theme won't apply until the app is restarted.</TextBlock>
+            </Grid>
+
+            <TextBox Grid.Row="1"
                      Text="{x:Bind ViewModel.StoragePath, Mode=OneWay}"
                      IsReadOnly="True"
                      Header="Storage path" />
 
-            <Button Grid.Row="1"
+            <Button Grid.Row="2"
                     x:Name="PickFolderButton"
                     Click="ChangeStoragePathButton_Click"
                     HorizontalAlignment="Right"
